data/derived/sp14/progs/unify/prog2742.ml.out
Characters 84-88:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a -> 'a
       but an expression was expected of type 'a -> 'b -> 'a
       The type variable 'a occurs inside 'b -> 'a
